Completando o refinamento da experiencia do usuario

--- a/Front/partials/_login.scss
+++ b/Front/partials/_login.scss
@@ -47,7 +47,7 @@ header {
     justify-content: center;
     align-items: center;
     justify-content: space-between;
-    padding-left: 21px;
+    padding: 0 21px;
     margin-bottom: 20px;
     border-radius: 35px;
     color: #676767;
