--- a/Front/partials/_addTask.scss
+++ b/Front/partials/_addTask.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 70vh;
 }
 
 #containerAddTask {
@@ -68,6 +69,24 @@
     i:last-of-type {
         color: #676767;
         cursor: pointer;
+    }
+}
+
+#inputComentario {
+    background-color: $main;
+    width: 50%;
+    height: 60px;
+    border-radius: 5px;
+    padding: 5px;
+
+    textarea {
+        all: unset;
+        height: 100%;
+        width: 100%;
+    }
+
+    textarea::placeholder {
+        color: white;
     }
 }
 
@@ -152,6 +171,7 @@
         width: 100%;
         border-radius: 5px;
         padding: 2px 10px;
+        height: 100px;
     }
 
     textarea::placeholder {
@@ -204,6 +224,26 @@
 
 #selectPrio{
     display: none;
+}
+
+#selectRespon{
+    // background-color: red;
+    width: 200px;
+    height: 70px;
+    position: absolute;
+    left: 350px;
+
+    // display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    padding: 5px;
+
+    span{
+        background-color: #484848;
+        padding: 2px 3px;
+        border-radius: 4px;
+        cursor: pointer;
+    }
 }
 
 
@@ -319,6 +359,16 @@
 
         span {
             margin: 5px;
+        }
+    }
+
+    #selectRespon{
+        left: 50px;
+        background-color: #484848;
+        border-radius: 5px;
+
+        span{
+            background-color: #676767;
         }
     }
 }
