--- a/Front/partials/_taskManager.scss
+++ b/Front/partials/_taskManager.scss
@@ -33,6 +33,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 90vh;   
 }
 
 #sectionHeader{
@@ -85,7 +86,7 @@
     font-weight: 700;
     color: $main;
     cursor: pointer;
-    // margin-right: 25px;
+    // margin-left: 25px;
 
     a {
         all: unset;
@@ -156,35 +157,35 @@
     }
 
     /* Definições de largura para as colunas da tabela */
-    .tarefas {
-        width: 30%;
-        min-width: 330px;
-    }
+    // .tarefas {
+    //     width: 30%;
+    //     min-width: 330px;
+    // }
 
-    .status {
-        width: 10%;
-        min-width: 129px;
-    }
+    // .status {
+    //     width: 10%;
+    //     min-width: 129px;
+    // }
 
-    .responsavel {
-        width: 10%;
-        min-width: 115px;
-    }
+    // .responsavel {
+    //     width: 10%;
+    //     min-width: 115px;
+    // }
 
-    .prazo {
-        width: 10%;
-        min-width: 113px;
-    }
+    // .prazo {
+    //     width: 10%;
+    //     min-width: 113px;
+    // }
 
-    .prioridade {
-        width: 10%;
-        min-width: 114px;
-    }
+    // .prioridade {
+    //     width: 10%;
+    //     min-width: 114px;
+    // }
 
-    .descricao {
-        width: 30%;
-        min-width: 337px;
-    }
+    // .descricao {
+    //     width: 30%;
+    //     min-width: 337px;
+    // }
 }
 
 /* Seleciona todos os cabeçalhos <th>, exceto o primeiro e o último */
@@ -279,6 +280,11 @@
         padding: 2px 8px;
         color: white;
     }
+
+}
+
+.foraPrazo {
+   background-color: #a61010 !important;
 }
 
 //Estilizando a coluna de prioridade sem pegar o titulo
