--- a/Front/styles.css
+++ b/Front/styles.css
@@ -176,7 +176,7 @@ header img {
   justify-content: center;
   align-items: center;
   justify-content: space-between;
-  padding-left: 21px;
+  padding: 0 21px;
   margin-bottom: 20px;
   border-radius: 35px;
   color: #676767;
@@ -259,6 +259,7 @@ header img {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 90vh;
 }
 
 #sectionHeader {
@@ -363,30 +364,6 @@ header img {
 #tableTitle th:not(:last-child) {
   border-right: 2px solid #676767;
 }
-#tableTitle .tarefas {
-  width: 30%;
-  min-width: 330px;
-}
-#tableTitle .status {
-  width: 10%;
-  min-width: 129px;
-}
-#tableTitle .responsavel {
-  width: 10%;
-  min-width: 115px;
-}
-#tableTitle .prazo {
-  width: 10%;
-  min-width: 113px;
-}
-#tableTitle .prioridade {
-  width: 10%;
-  min-width: 114px;
-}
-#tableTitle .descricao {
-  width: 30%;
-  min-width: 337px;
-}
 
 /* Seleciona todos os cabeçalhos <th>, exceto o primeiro e o último */
 #tableTasks tr th:not(:first-child):not(:last-child) {
@@ -445,6 +422,10 @@ header img {
   border-radius: 15px;
   padding: 2px 8px;
   color: white;
+}
+
+.foraPrazo {
+  background-color: #a61010 !important;
 }
 
 .prioridade:not(th) {
@@ -558,6 +539,10 @@ header img {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#sectionHeaderQuadro {
+  margin: 15px;
 }
 
 /* Container que engloba as tarefas e o conteúdo principal */
@@ -890,7 +875,7 @@ span.arquivada {
     margin: 0 5px;
   }
   .quadroManager {
-    padding: 25px 0 25px 4px !important;
+    padding: 25px 0 85px 4px !important;
   }
 }
 #bodyAddTask {
@@ -898,6 +883,7 @@ span.arquivada {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 70vh;
 }
 
 #containerAddTask {
@@ -956,6 +942,25 @@ span.arquivada {
 #addTaskStatus i:last-of-type {
   color: #676767;
   cursor: pointer;
+}
+
+#inputComentario {
+  background-color: #676767;
+  width: 50%;
+  height: 60px;
+  border-radius: 5px;
+  padding: 5px;
+}
+#inputComentario textarea {
+  all: unset;
+  height: 100%;
+  width: 100%;
+}
+#inputComentario textarea::-moz-placeholder {
+  color: white;
+}
+#inputComentario textarea::placeholder {
+  color: white;
 }
 
 #addTaskPrioridade h3 {
@@ -1036,6 +1041,7 @@ span.arquivada {
   width: 100%;
   border-radius: 5px;
   padding: 2px 10px;
+  height: 100px;
 }
 #addTaskDescricao textarea::-moz-placeholder {
   color: white;
@@ -1091,6 +1097,22 @@ span.arquivada {
 
 #selectPrio {
   display: none;
+}
+
+#selectRespon {
+  width: 200px;
+  height: 70px;
+  position: absolute;
+  left: 350px;
+  flex-direction: column;
+  overflow-y: auto;
+  padding: 5px;
+}
+#selectRespon span {
+  background-color: #484848;
+  padding: 2px 3px;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 @media (max-width: 1024px) {
@@ -1175,5 +1197,13 @@ span.arquivada {
   }
   #selectPrio span {
     margin: 5px;
+  }
+  #selectRespon {
+    left: 50px;
+    background-color: #484848;
+    border-radius: 5px;
+  }
+  #selectRespon span {
+    background-color: #676767;
   }
 }/*# sourceMappingURL=styles.css.map */
