--- a/Front/partials/_addTask.scss
+++ b/Front/partials/_addTask.scss
@@ -227,7 +227,7 @@
 }
 
 #selectRespon{
-    // background-color: red;
+    background-color: #676767;
     width: 200px;
     height: 70px;
     position: absolute;
@@ -236,11 +236,12 @@
     // display: flex;
     flex-direction: column;
     overflow-y: auto;
-    padding: 5px;
+    padding: 15px;
+    border-radius: 15px;
 
     span{
         background-color: #484848;
-        padding: 2px 3px;
+        padding: 2px 6px;
         border-radius: 4px;
         cursor: pointer;
     }
@@ -260,7 +261,8 @@
         }
 
         input {
-            width: 50px;
+            width: 70px;
+            padding-left: 5px;
         }
     }
 
