--- a/Front/partials/_taskManager.scss
+++ b/Front/partials/_taskManager.scss
@@ -321,6 +321,30 @@
     font-size: 13px;
 }
 
+#btnImprimirTasks {
+    all: unset;
+    margin-top: 25px;
+    padding: 5px 10px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #676767;
+    color: white;
+    border-radius: 15px;
+    border: 2px solid black;
+    font-family: 'Poppins';
+    font-weight: 700;
+    cursor: pointer;
+
+    i {
+        margin-right: 5px;
+    }
+}
+
+#btnImprimirTasks:active {
+    color: red;
+    background-color: #212121;
+}
+
 
 @media (max-width: 1050px) {
     #headerAllTask {
@@ -424,5 +448,10 @@
             color: black;
             border-bottom: 2px solid black;
         }
+    }
+
+    #btnImprimirTasks {
+        margin-left: auto;
+        margin-right: auto;
     }
 }
