--- a/Front/styles.css
+++ b/Front/styles.css
@@ -457,6 +457,29 @@ header img {
   font-size: 13px;
 }
 
+#btnImprimirTasks {
+  all: unset;
+  margin-top: 25px;
+  padding: 5px 10px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #676767;
+  color: white;
+  border-radius: 15px;
+  border: 2px solid black;
+  font-family: "Poppins";
+  font-weight: 700;
+  cursor: pointer;
+}
+#btnImprimirTasks i {
+  margin-right: 5px;
+}
+
+#btnImprimirTasks:active {
+  color: red;
+  background-color: #212121;
+}
+
 @media (max-width: 1050px) {
   #headerAllTask a {
     margin-left: 10px;
@@ -530,6 +553,10 @@ header img {
   #navAllTask .itemNavTask:first-child {
     color: black;
     border-bottom: 2px solid black;
+  }
+  #btnImprimirTasks {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 /* Estilos principais para o layout da página */
@@ -1100,17 +1127,19 @@ span.arquivada {
 }
 
 #selectRespon {
+  background-color: #676767;
   width: 200px;
   height: 70px;
   position: absolute;
   left: 350px;
   flex-direction: column;
   overflow-y: auto;
-  padding: 5px;
+  padding: 15px;
+  border-radius: 15px;
 }
 #selectRespon span {
   background-color: #484848;
-  padding: 2px 3px;
+  padding: 2px 6px;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -1125,7 +1154,8 @@ span.arquivada {
     font-size: 15px;
   }
   #addTaskResponsavel input {
-    width: 50px;
+    width: 70px;
+    padding-left: 5px;
   }
   #addTaskSala {
     width: 100%;
@@ -1206,4 +1236,174 @@ span.arquivada {
   #selectRespon span {
     background-color: #676767;
   }
+}
+#bodyDash {
+  background-color: #e2e2e2;
+  height: auto;
+}
+
+#containerDash {
+  background-color: white;
+  width: 95%;
+  min-height: 85vh;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 15px;
+  border-radius: 25px;
+  padding: 15px;
+}
+
+#headerContainerDash {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Arimo";
+  color: #676767;
+}
+
+#mainDash {
+  min-height: 70vh;
+  height: auto;
+  display: flex;
+  margin-top: 40px;
+  gap: 15px;
+}
+
+.columnDash {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.columnDash div {
+  background-color: #e7e7e7;
+  width: 100%;
+  border-radius: 15px;
+}
+
+#columnOne {
+  width: 9%;
+  height: auto;
+  /* Alterado para não forçar uma altura fixa */
+  display: flex;
+  align-items: start;
+}
+
+#openTasks {
+  aspect-ratio: 1/1;
+  /* Mantém altura igual à largura */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Arimo";
+  color: #ae070e;
+}
+#openTasks h2 {
+  font-size: 30px;
+  margin-top: 10px;
+}
+#openTasks span {
+  font-size: 60px;
+  font-weight: 700;
+}
+
+#columnTwo {
+  width: 27%;
+  display: flex;
+}
+#columnTwo #totalMonth {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#columnTwo #totalMonth h2 {
+  font-size: 32px;
+  font-family: "Poppins";
+  color: #676767;
+}
+#columnTwo #totalMonth span {
+  font-size: 35px;
+  font-family: "Arimo";
+  color: #ae070e;
+  font-weight: 700;
+  margin-left: 10px;
+}
+#columnTwo #doneOnTime {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  font-style: italic;
+  font-family: "Poppins";
+  color: #676767;
+}
+#columnTwo #doneOnTime div {
+  aspect-ratio: 1/0.75;
+  /* Mantém altura igual à largura */
+}
+#columnTwo #closeToDeadline {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  font-size: 20px;
+  font-family: "Arimo";
+  color: #676767;
+}
+#columnTwo #closeToDeadline .taskCloseDeadLine {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 12px 10px;
+}
+#columnTwo #closeToDeadline .taskCloseDeadLine span {
+  padding: 3px 6px;
+  border-radius: 8px;
+  background-color: #676767;
+  font-size: 18px;
+  color: white;
+}
+#columnTwo #closeToDeadline .taskCloseDeadLine a {
+  color: #676767;
+  font-weight: 600;
+}
+
+#columnThree {
+  width: 36%;
+}
+#columnThree #averageOpenTime {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: pre;
+  font-family: "Poppins";
+  font-weight: 700;
+  color: #676767;
+}
+#columnThree #averageOpenTime h2 {
+  font-size: 32px;
+}
+#columnThree #averageOpenTime p {
+  color: #ae070e;
+  font-size: 35px;
+}
+#columnThree #averageOpenTime span {
+  font-size: 15px;
+}
+#columnThree #efficiencyRate {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Poppins";
+  font-style: italic;
+}
+
+#columnFour {
+  width: 28%;
 }/*# sourceMappingURL=styles.css.map */
