--- a/Front/styles.scss
+++ b/Front/styles.scss
@@ -139,3 +139,4 @@ $background: #e2e2e2;
 @import "./partials/taskManager";
 @import "./partials/taskQuadroManager";
 @import "./partials/addTask";
+@import "./partials/dashBoard";
