--- a/Front/styles.css
+++ b/Front/styles.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 .open-sans {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
@@ -1397,13 +1398,186 @@ span.arquivada {
   font-size: 15px;
 }
 #columnThree #efficiencyRate {
+  height: 375px;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-family: "Poppins";
   font-style: italic;
+  color: #676767;
+}
+#columnThree #efficiencyRate h2 {
+  font-size: 30px;
+}
+#columnThree #tasksCalendar {
+  height: 260px;
+  display: flex;
+  padding: 15px;
+  gap: 15px;
+}
+#columnThree #tasksCalendar #calendar {
+  background-color: white;
+  width: 65%;
+  padding: 3px 10px;
+}
+#columnThree #tasksCalendar #calendar #containerMonth {
+  background-color: rgba(255, 255, 255, 0);
+  font-family: "Poppins";
+  font-weight: 700;
+  font-style: italic;
+}
+#columnThree #tasksCalendar #calendar #weekdays {
+  background-color: black;
+  display: flex;
+  width: 100%;
+  height: 25px;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: "Open Sans";
+  font-weight: 700;
+  font-size: 14px;
+  color: white;
+}
+#columnThree #tasksCalendar #topicsCalendar {
+  width: 35%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  padding-top: 120px;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  /* Firefox */
+  -ms-overflow-style: none;
+  /* Internet Explorer e Edge */
+}
+#columnThree #tasksCalendar #topicsCalendar .topic {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-family: "Poppins";
+  font-weight: 700;
+}
+#columnThree #tasksCalendar #topicsCalendar .topic span {
+  background-color: #ff4c53;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+#columnThree #tasksCalendar #topicsCalendar .topic a {
+  flex: 1;
+  /* Faz com que o parágrafo ocupe o máximo de espaço disponível */
+  white-space: nowrap;
+  /* Impede que o texto quebre linha */
+  overflow: hidden;
+  /* Esconde o que ultrapassa a largura */
+  text-overflow: ellipsis;
+  /* Adiciona os "..." quando o texto for cortado */
+  text-decoration: underline;
+  cursor: pointer;
+}
+#columnThree #tasksCalendar #topicsCalendar::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari e Edge */
 }
 
 #columnFour {
   width: 28%;
+}
+
+#RankingColabs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  font-family: "Arimo";
+  font-size: 20px;
+  color: #676767;
+}
+#RankingColabs #captionRanking {
+  background-color: rgba(185, 185, 185, 0.9294117647);
+  display: flex;
+  justify-content: center;
+  margin: 5px 0 15px 0;
+  border-radius: 0;
+}
+#RankingColabs #captionRanking p {
+  color: #676767;
+  font-weight: 700;
+  font-size: 17px;
+}
+#RankingColabs .colab {
+  background-color: #8DFF5E;
+  width: 100%;
+  height: 45px;
+  display: flex;
+  border-radius: 7px;
+}
+#RankingColabs .nameColab {
+  background-color: rgba(255, 255, 255, 0);
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  gap: 10px;
+  font-weight: 700;
+}
+#RankingColabs .nameColab img {
+  width: 30px;
+  border-radius: 100px;
+}
+#RankingColabs .statesColab {
+  background-color: rgba(255, 255, 255, 0);
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  margin-right: 10px;
+  font-weight: 700;
+}
+
+#days {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 5px;
+  margin-top: 10px;
+}
+
+.day,
+.empty-day {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  border-radius: 50% !important;
+  cursor: pointer;
+}
+
+.empty-day {
+  background: none;
+  pointer-events: none;
+}
+
+.day {
+  color: black;
+}
+
+.day:hover {
+  background-color: #ddd;
+}
+
+.past-day {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.selected {
+  background-color: #ff4c53 !important;
+  color: white;
 }/*# sourceMappingURL=styles.css.map */
